fix: change resume link color for better contrast

--- a/_includes/site.css
+++ b/_includes/site.css
@@ -221,7 +221,7 @@ div.page-count {
 
 .resume > a {
     font-size: var(--font-150);
-    color: var(--african-violet);
+    color: var(--maximum-blue);
 }
 
 article {
